[gd_scene load_steps=5 format=2]

[ext_resource path="res://levels/LevelSelect.gd" type="Script" id=1]
[ext_resource path="res://assets/images/family.jpeg" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Kingthings Trypewriter 2.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="family" type="Sprite" parent="."]
position = Vector2( 989.816, 337.428 )
rotation = 0.174533
texture = ExtResource( 2 )

[node name="AnxietyButton" type="TextureButton" parent="."]
margin_left = 58.0
margin_top = 922.0
margin_right = 424.0
margin_bottom = 1005.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="AnxietyButton"]
margin_left = 19.938
margin_top = -7.06604
margin_right = 354.938
margin_bottom = 64.934
custom_fonts/font = SubResource( 1 )
text = "Ansiedade"

[node name="DepressionButton" type="TextureButton" parent="."]
margin_left = 650.365
margin_top = 912.412
margin_right = 1061.37
margin_bottom = 995.412
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="DepressionButton"]
custom_fonts/font = SubResource( 1 )
text = "Depress√£o"

[node name="AngerButton" type="TextureButton" parent="."]
margin_left = 1295.52
margin_top = 922.273
margin_right = 1706.52
margin_bottom = 1005.27
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="AngerButton"]
custom_fonts/font = SubResource( 1 )
text = "Raiva
"
